codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_options_notes_visible.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 1/1                                                                                                          
  Choose an option.                                                                                                     
  › 1. Option 1  First choice.                                                                                          
    2. Option 2  Second choice.                                                                                         
    3. Option 3  Third choice.                                                                                          
  Notes for Option 1                                                                                                    
                                                                                                                        
  › Add notes                                                                                                           
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Option 1 of 3 | tab to clear notes | enter to submit answer | esc to interrupt
